# rs-dpr-service

./: .pre-commit-config.yaml  README.md  pyproject.toml
.github/: Dockerfile  Dockerfile.dask-eopf-local
.github/actions/build-wheel/: action.yml
.github/actions/poetry-install/: action.yml
.github/actions/publish-docker/: action.yml
.github/scripts/: git_debug_image.sh
.github/workflows/: check-code-quality.yml  publish-binaries.yml
config/: geoapi.yaml  tasktable.json
rs_dpr_service/: bandit.yml  main.py  processors.py
